--- a/PetShop/src/main/resources/templates/admin/_sidebar.html
+++ b/PetShop/src/main/resources/templates/admin/_sidebar.html
@@ -1,7 +1,8 @@
 <!-- Sidebar -->
 <style>
     .sidebar {
-        min-height: 100%;
+        min-height: 100vh;
+        width: 250px;
         min-width: 250px;
     }
 
