--- a/PetShop/src/main/resources/templates/admin/index.html
+++ b/PetShop/src/main/resources/templates/admin/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Animate CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="https://unpkg.com/ng-table@4.0.0/bundles/ng-table.css">
+
     <style>
         nav {
             background-color: #030f39 !important;
@@ -39,22 +41,22 @@
 <div th:insert=" ~{/module/_loadingSpinner}"></div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular-route.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/ng-table/bundles/ng-table.min.js"></script>
-<script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-route.js"></script>
+<script src="https://unpkg.com/ng-table@4.0.0/bundles/ng-table.js"></script>
+<script type="text/javascript">
     var app = angular.module('myApp', ['ngRoute', 'ngTable']);
     app.controller('myCtrl', function ($scope, $http, NgTableParams, $filter) {
         var baseUrl = 'http://localhost:8080/api/';
         $scope.petData = [];
         $scope.petCategoryData = [];
 
-        $http.get(baseUrl + 'pet').then(function (response) {
+        $http.get('http://localhost:8080/api/' + 'pet').then(function (response) {
             $scope.petData = response.data;
             $scope.petsTable = new NgTableParams({
-                page: 1,    // Trang đầu tiên
-                count: 10   // Số lượng mục trên mỗi trang
+                page: 1,
+                count: 5
             }, {
-                total: $scope.petData.length, // Tổng số mục
+                counts: [],
                 dataset: $scope.petData
             });
         }).catch(function (error) {
