--- a/PetShop/src/main/resources/templates/admin/_sidebar.html
+++ b/PetShop/src/main/resources/templates/admin/_sidebar.html
@@ -25,7 +25,7 @@
     <!-- Brand -->
     <div class="navbar-brand p-4 d-flex align-items-center">
         <i class="fas fa-user-circle fa-2x"></i> <!-- Example Brand Icon -->
-        <span class="ms-2">Admin Panelllllllll</span>
+        <span class="ms-2">jbajfabfu</span>
     </div>
     <hr class="m-0">
     <!-- Navigation -->
