--- a/PetShop/src/main/resources/templates/admin/index.html
+++ b/PetShop/src/main/resources/templates/admin/index.html
@@ -12,8 +12,15 @@
     <!-- Animate CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="https://unpkg.com/ng-table@4.0.0/bundles/ng-table.css">
+    <link rel="stylesheet" href="https://unpkg.com/browse/ng-table@4.0.0/bundles/ng-table.css.map">
+
 
     <style>
+        .ng-table-pager {
+            display: flex;
+            justify-content: center;
+        }
+
         nav {
             background-color: #030f39 !important;
         }
