update form register
Lấy api địa chỉ Việt Nam

--- a/PetShop/src/main/resources/templates/security/login.html
+++ b/PetShop/src/main/resources/templates/security/login.html
@@ -47,7 +47,7 @@
                             </div>
                             <div class="d-flex justify-content-center gap-3 mt-4">
                                 <button class="btn font-resp" type="submit">Đăng nhập</button>
-                                <a class="btn font-resp" href="/dang-ki" style="background: #AACCFF">Đăng kí</a>
+                                <a class="btn font-resp" href="/register" style="background: #AACCFF">Đăng kí</a>
                             </div>
                         </form>
                     </div>
